--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Dialogflow Messenger Example</title>
+  <!--Styling-->
   <style>
     body {
       margin: 0;
       padding: 0;
-      /* Replace the URL below with your own image link or path */
       background-image: url('https://img.freepik.com/premium-photo/robot-hominoid-use-mobile-phone-tablet-concept-ai-thinking-brain_31965-240521.jpg');
-      background-size: cover;       /* make it cover the whole page */
-      background-position: center;  /* center the image */
-      background-repeat: no-repeat; /* no tile repeat */
-      height: 100vh;                /* full viewport height */
-      overflow: hidden;             /* optional, hides scrollbars */
+      background-size: cover;      
+      background-position: center; 
+      background-repeat: no-repeat; 
+      height: 100vh;                
+      overflow: hidden;            
     }
   </style>
 </head>
